Bug 1270056 - skip the GC in nsGlobalWindow::SetNewDocument() r=smaug